--- a/web/index.html
+++ b/web/index.html
@@ -40,6 +40,7 @@
   <script src="flutter.js" defer></script>
 </head>
 <body>
+  <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyAY3GtsN69ANEf01HF1h8L0Sto2Bmu0T54"></script>
   <script>
     window.addEventListener('load', function(ev) {
       // Download main.dart.js
